Fixed BUG#6127: Stored procedure handlers within handlers don't work     Replaced the dumb in-handler/not-in-handler check with a proper recursion     check of handlers being executed.     (Re-commit in a different tree, to make push possible.)